# rate_zahl

./: .gitignore  README.md  chat_gpt.py  controller.py  main.py  model.py  player.py  pyproject.toml  test.py  view.py
src/: app.py  mediator.py  observer.py  ratezahl.py
src/assets/: __init__.py
src/command/: command.py  make_move_command.py
src/controller/: __init__.py  controller.py
src/game/: game.py  gamelogic.py  ratezahllogic.py
src/helper/: canvas_configuration.py  func.py  game_range.py  text_messages.py
src/model/: __init__.py  base.py  model.py
src/player/: __init__.py  ai.py  human.py  players.py
src/rate_zahl/assets/: __init__.py
src/rate_zahl/controller/: __init__.py  controller.py
src/rate_zahl/core/: app.py
src/rate_zahl/model/: __init__.py  enums.py  model.py
src/rate_zahl/player/: __init__.py  ai.py  human.py
src/rate_zahl/ports/: data.py  interface.py  player.py  score.py
src/rate_zahl/strings/: __init__.py  de.py  en.py
src/rate_zahl/view/: __init__.py  cli.py
src/view/: CLI.py  GUI.py  __init__.py  cli.py  tkinter.py  view.py
test/: test_controller.py  test_model.py  test_view.py
tests/: stub.py  stubs.py  test_controller.py  test_game.py  test_model.py  test_player.py  test_view.py
