[tool.poetry]
name = "rate-zahl"
version = "0.1.0"
description = ""
authors = ["Markus Iorio <mbalzert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
mypy = "^0.971"
pytest = "^7.1.3"
ruff = "^0.0.289"
coverage = "^7.3.1"
sourcery = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py312']

[tool.ruff]
select = [
    "A",
    "B",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
ignore = ["ANN001", "ANN101", "ANN102", "D211", "D212", "D107"]