[tool.poetry]
name = "rate-zahl"
version = "0.1.0"
description = ""
authors = ["Markus Iorio <mbalzert@gmail.com>"]
readme = "README.md"
packages = [{include = "rate_zahl"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
mypy = "^0.971"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
